# primitiveCFD

./: .env  .gitignore  .txt  CMakeLists.txt  Makefile  README.md  main.cpp
shaders/: cfd_frag.wgsl  frag.wgsl  picking.frag  picking.vert  step1Compute.wgsl  step2Compute.wgsl  step3Compute.wgsl  step4Compute.wgsl  step5Compute.wgsl  step6Compute.wgsl  vert.wgsl
src/app/: CFD.cpp  CFD.h  app.cpp  app.h
src/base/: base.cpp  base.h  grid.cpp  grid.h  helper.cpp  helper.h  instance.cpp  instance.h
